--- a/packages/foo/package.json
+++ b/packages/foo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "foo",
-  "version": "1.1.0-alpha.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
