--- a/packages/baz/package.json
+++ b/packages/baz/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "e1b465030a526fbe80b26e5f0f122128fec0ce9c"
 }
