--- a/packages/foo/package.json
+++ b/packages/foo/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "e1b465030a526fbe80b26e5f0f122128fec0ce9c"
 }
